--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,11 +5,10 @@
 
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
 .note-container {
   max-width: 980px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .new-note-btn {
   width: 200px;
@@ -22,7 +21,6 @@
   outline: 0;
   transition: all 0.3s;
   cursor: pointer;
-  font-family: 'Caveat', cursive;
   text-align: center;
   text-decoration: none;
   color: #1e1e1e
@@ -54,7 +52,6 @@
 
 .note .note-body {
   outline: 0;
-  font-family: 'Caveat', cursive;
   font-size: 24px;
   padding: 10px 16px 16px;
 }
